[package]
name = "h_math"
version = "1.4.0"
edition = "2024"
authors = ["Henry Lier <henryaksellier@gmail.com>"]
license = "MIT"
categories = ["mathematics", "science"]
keywords = ["mathematics", "science", "linear-algebra"]
description = "A Rust library for simple and advanced mathematical computations."
repository = "https://github.com/HK7Harr/h_math"


[dependencies]


